[gd_scene load_steps=32 format=3 uid="uid://cjexi8plo42fn"]

[ext_resource type="Texture2D" uid="uid://mej3yr1mwmu6" path="res://Green Portal Sprite Sheet.png" id="1_0r486"]
[ext_resource type="Script" uid="uid://buu2ra7i3ndwy" path="res://portal.gd" id="1_ef3v5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ef3v5"]
atlas = ExtResource("1_0r486")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_grrij"]
atlas = ExtResource("1_0r486")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r214"]
atlas = ExtResource("1_0r486")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pgh4"]
atlas = ExtResource("1_0r486")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtc1a"]
atlas = ExtResource("1_0r486")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8rct"]
atlas = ExtResource("1_0r486")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8kna"]
atlas = ExtResource("1_0r486")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a7dg"]
atlas = ExtResource("1_0r486")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl8kn"]
atlas = ExtResource("1_0r486")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x30s"]
atlas = ExtResource("1_0r486")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_byaht"]
atlas = ExtResource("1_0r486")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd4p5"]
atlas = ExtResource("1_0r486")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_615up"]
atlas = ExtResource("1_0r486")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilnwx"]
atlas = ExtResource("1_0r486")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4sdh"]
atlas = ExtResource("1_0r486")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78ryx"]
atlas = ExtResource("1_0r486")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ctne"]
atlas = ExtResource("1_0r486")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlpku"]
atlas = ExtResource("1_0r486")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_agl18"]
atlas = ExtResource("1_0r486")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqqto"]
atlas = ExtResource("1_0r486")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd8ng"]
atlas = ExtResource("1_0r486")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxxjt"]
atlas = ExtResource("1_0r486")
region = Rect2(448, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ewkfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef3v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grrij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r214")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pgh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtc1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8rct")
}],
"loop": true,
"name": &"Close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8kna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a7dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl8kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x30s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byaht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd4p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_615up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilnwx")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4sdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78ryx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ctne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlpku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agl18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqqto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd8ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxxjt")
}],
"loop": true,
"name": &"Open",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ef3v5"]
radius = 7.0
height = 42.0

[sub_resource type="Animation" id="Animation_ef3v5"]
resource_name = "Close"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Close"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_grrij"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_0r486"]
resource_name = "Open"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Open"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_6r214"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2pgh4"]
_data = {
&"Close": SubResource("Animation_ef3v5"),
&"Idle": SubResource("Animation_grrij"),
&"Open": SubResource("Animation_0r486"),
&"RESET": SubResource("Animation_6r214")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_ef3v5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ewkfo")
animation = &"Idle"
frame = 1

[node name="PortalArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalArea"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_ef3v5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2pgh4")
}
autoplay = "Idle"

[connection signal="area_entered" from="PortalArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="PortalArea" to="." method="_on_area_2d_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
